--- a/style.css
+++ b/style.css
@@ -1,13 +1,15 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,500,700|Work+Sans:300,400,500,600,700&display=swap);
+@import url(https://fonts.googleapis.com/css?family=Roboto,sans-serif:400,500,700|Work+Sans:300,400,500,600,700&display=swap);
 body{
+    width: 100%;
     font-weight: 400;
-    font-family: Roboto,Arial,sans-serif;
+    font-family: 'Roboto', sans-serif,Arial,sans-serif;
     color: #747474;
     padding-top: 70px;
     -webkit-font-smoothing: antialiased;
     margin: 0px;
 }
 nav{
+    width: 100%;
     display: flex;
     background-color: #ffffff;
     justify-content: center;
@@ -16,9 +18,11 @@ nav{
     z-index: 1000;
     width: 100%;
     box-shadow: 0 -2px 10px 0 rgb(0 0 0 / 15%);
+    transition: box-shadow .25s ease 0s;
 }
+
 .header{
-    width: 80%;
+    width: 65%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -44,7 +48,7 @@ nav{
     justify-self: space-evenly;
     padding: 0px;
     margin-right: 3.4em;
-    font-family: roboto;
+    font-family: 'Roboto', sans-serif;
     font-size: .9375rem;
 }
 .main-menu li{
@@ -141,14 +145,12 @@ h1 {
     color: #00b39b;
     line-height: 44px;
 }
-h1:hover{
-    text-decoration: underline;
-}
+
 h1, h2, h3, h4 {
     margin: 1em 0;
-    font-family: worksans;
+    font-family: 'Work Sans', sans-serif;
     font-weight: 100;
-    letter-spacing: 1px;
+    letter-spacing: -0.3px;
 }
 .flex-lead{
     display: flex;
@@ -159,52 +161,119 @@ h1, h2, h3, h4 {
     line-height: 1.8em;
     min-height: 1px ;
     padding: 15px;
-    font-family: roboto;
+    font-family: 'Roboto', sans-serif;
     font-size: 16px;
-}
-.flex-lead>p:hover{
-    text-decoration: underline;
 }
 .services{
     margin: 3.75rem auto 2.5rem;
 }
 .service-grid{
+    width: 80%;
     margin: 0 -10px;
 }
 .cartes {
     
     display: grid;
-    grid-template-columns: 33.33% 33.33% 33.33%;
+    grid-template-columns: auto auto auto;
     gap: 20px;
-    font-family: roboto;
+    font-family: 'Roboto', sans-serif;
     color:#ffffff;
     min-height: 1px;
     padding: 10px;
 }
-.cartes div{
-    
+.carte1,.carte2,.carte3{
+    width: 15.6em;
     border-radius: 10px;
     padding: 2em 2em 0;
-    overflow: hidden;
-    height: 345px;
+    height: 20em;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     transition: all .2s ease 0s;
 }
+/* .icon-carte{
+    width: 20px;
+} */
 .carte1{
     background-color: #00ccb1;
 }
 .carte2{
-    background-color: #7c2626;
+    background-color: #3d82df;
 }
 .carte3{
-    background-color: #2dbd45;
+    background-color: 
+    #1a2734 ;
 }
 .title-carte{
-        font-size: 1.625em;
+        font-size: 26px;
         font-weight: 400;
+        letter-spacing: -O.3px;
+        line-height: 33.8px;
         color: #fff;
         margin: 0.3em 0;
         z-index: 3;
+}
+.content-carte{
+    font-family: 'Work Sans', sans-serif;
+    font-size: 24px;
+    line-height: 28.8px;
+    letter-spacing: -0.3px;
+    font-weight: 200;
+}
+.select-carte{
+    align-self: flex-start;
+    margin-bottom: 41px;
+    position: relative;
+    display: inline-block;
+    vertical-align: middle;
+    outline: 0;
+    background: none;
+    border: 0;
+    color: #fff;
+    font-family: 'Roboto',Arial,sans-serif;
+    font-weight: 400;
+    letter-spacing: .04em;
+    font-size: 1.2rem;
+    text-align: center;
+}
+.select-carte select {
+    color: #ffffff;
+    width: 100%;
+    background: transparent;
+    border: 0;
+    border-radius: 0;
+    padding: 0 2em 0 0;
+    -webkit-appearance: none;
+    outline: 0;
+    text-transform: none;
+    text-decoration: underline;
+    cursor: pointer;
+    font-size: 19px;
+}
+.select-carte::after {
+    content: "";
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    margin-top: -0.5em;
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    margin-right: 0.2em;
+    line-height: 1em;
+    background: no-repeat url(down.svg) 50% 50%;
+    background-size: 15px;
+    
+}
+#select3{
+    margin-bottom: -30px;
+}
+.cartes img{
+    margin-bottom: -0.4em;
+}
+.brands {
+    margin: 2.5rem auto 3.125rem;
+}
+.brands{
+    
 }
