add flex wrap in footer <P> style

--- a/style.css
+++ b/style.css
@@ -578,6 +578,7 @@ footer {
 }
 footer > div > p {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-evenly;
   text-align: center;
 }
